# amazon-chime-sdk-call-analytics-recorder

./: .env  .eslintrc.json  .gitignore  .projenrc.js  .projenrc.ts  CLI_COMMANDS.md  README.md  SUMMARIZATION.md  cdk.json  package.json
.github/workflows/: upgrade-site.yml
.projen/: deps.json  tasks.json
samples/: 31a62a1d-5dab-4b8d-8f17-1dad22c6f075.json  Retail41.json
src/: amazon-chime-sdk-call-analytics-recording.ts  apiGateway.ts  appSync.ts  asterisk.ts  chime-sdk-media-pipelines.ts  chime-sdk-voice.ts  cognito.ts  cohereInput.ts  distribution.ts  dynamodb.ts  ecs.ts  eventbridge.ts  index.ts  lambda.ts  s3.ts  server.ts  stateMachine.ts  validateEnv.ts  vpc.ts
src/resources/asterisk/: Dockerfile  docker-entrypoint.sh
src/resources/checkEndpoint/: index.py
src/resources/checkStatus/: Dockerfile  app.py  index.py  pyproject.toml  requirements.txt
src/resources/controlSageMaker/: index.ts
src/resources/graphql/: Mutation.AddQuery.req.vtl  Mutation.CreateCall.req.vtl  Mutation.DeleteCall.req.vtl  Mutation.UpdateCall.req.vtl  Query.GetCall.req.vtl  Query.ListCalls.req.vtl  schema.graphql
src/resources/notificationLambda/: index.ts
src/resources/sageMakerCustomResource/: index.ts
src/resources/startRecord/: index.py  pyproject.toml  requirements.txt
src/resources/startSagemaker/: app.py  index.py  pyproject.toml  requirements.txt
src/resources/startStateMachine/: index.py
src/resources/startSummarization/: app.py  pyproject.toml  requirements.txt
src/resources/startTranscribe/: index.py  index.ts
test/: main.test.ts
(+23 files in other folders)
